[gd_scene load_steps=3 format=3 uid="uid://cj4btd0gokf62"]

[ext_resource type="Script" path="res://Components/WeaponComponent.gd" id="1_ows87"]
[ext_resource type="PackedScene" uid="uid://cu1u71mrpl2jg" path="res://Weapons/Projectiles/DefaultBullet.tscn" id="2_ncldf"]

[node name="WeaponComponent" type="Node2D"]
script = ExtResource("1_ows87")
bullet_damage = 1.0
knockback_force = 1.0
magazine_size = 1
reload_time = 1.0
bullet = ExtResource("2_ncldf")

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="FirerateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
